--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'https://fonts.googleapis.com/css?family=Dosis';
 
 .clear {
   clear:both; 
@@ -42,6 +43,8 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #F08698;
+  font-family: 'quicksanditalic';
+  font-weight: bold;
 }
 
 hr {
@@ -49,7 +52,17 @@ hr {
 }
 
 header {
-  border-bottom: 9px solid #222222;
+  clear:both;
+  border-top: 9px solid #DE1436;
 }
 
+h1 {
+  font-family: 'quicksanditalic';
+  font-weight: bold;
+  font-style: 48px
+}
+h2 {
+  font-family: 'Dosis', sans-serif;
+  font-style: italics; 
+}
 
