--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -47,6 +47,18 @@
   font-weight: bold;
 }
 
+.next-quote {
+  color:#f84342;
+  font-size: 20px
+}
+
+.footer-blurb {
+  font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
+  font-sytle: italics;
+  text-align: right;
+  font-size: 10px;
+}
+
 hr {
   clear:both;
 }
