--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,19 @@
     </header>
     <hr />
     <br class= "clear" />
-
+<div class= "container">
 <%= yield %>
+</div>
 
+<div class= "footer">
+  <div class= "container">
+      <div class="col-xs-6">
+        <%= link_to "This isn't enough, I need more motivation...", "#", class: 'next-quote' %>
+      </div>
+      <div class="col-xs- footer-blurb">
+        First web application developed by Elson Mathew 
+      </div>
+  </div>
+</div>
 </body>
 </html>
