Add a quote form and program links to correct place

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,20 @@
 <body>
     <header>
       <div class= "col-xs-3">
+      <%= link_to root_path do %>
         <div class="circle">
            <br />
              When motivation
            <br />
              eludes you...
         </div>
+        <% end %>
       </div>
       <div class= "col-xs-4 slogan">
         Splurting out motivational quotes for all to see!
       </div>
       <div class= "col-xs-5 links">
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
@@ -33,7 +35,7 @@
 <div class= "footer">
   <div class= "container">
       <div class="col-xs-6">
-        <%= link_to "This isn't enough, I need more motivation...", "#", class: 'next-quote' %>
+        <%= link_to "This isn't enough, I need more motivation...", root_path, class: 'next-quote' %>
       </div>
       <div class="col-xs- footer-blurb">
         First web application developed by Elson Mathew 
