--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,12 @@
         </div>
         <% end %>
       </div>
-      <div class= "col-xs-4 slogan">
+      <div class= "col-xs-4 hidden-xs slogan">
         Splurting out motivational quotes for all to see!
       </div>
-      <div class= "col-xs-5 links">
+      <div class= "col-xs-8 col-xs-offset-1 col-sm-offset-o col-sm-5 links">
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+        &nbsp;&nbsp;
         <%= link_to 'About', about_path %>
       </div>
     </header>
@@ -37,8 +38,10 @@
         </div>
         <%= simple_form_for Quote.new do |f| %>
         <div class="modal-body">
-              <%= f.input :saying %>
-              <%= f.input :author %>
+              <%= f.input :saying, label: "What is the motivational quote you would like to submit?" %>
+              <br/>
+              <br/>
+              <%= f.input :author, label: "Who is the author of this quote?" %>
               <br />
               
           
@@ -65,10 +68,10 @@
 
 <div class= "footer">
   <div class= "container">
-      <div class="col-xs-6">
+      <div class="col-xs-12 col-sm-6">
         <%= link_to "This isn't enough, I need more motivation...", root_path, class: 'next-quote' %>
       </div>
-      <div class="col-xs- footer-blurb">
+      <div class="col-xs-12 col-sm-6 footer-blurb">
         First web application developed by Elson Mathew 
       </div>
   </div>
