--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,3 +1,15 @@
-<h1><%= @quote.saying %></h1>
-<h2><%= @quote.author %></h2>
+<h3>
+  <span>SPLURTY / No. <%= @quote.id %></span>
+  Here's the <u>best</u> motivational advice you can get!
+</h3>
 
+<br/>
+
+
+<h1><%= @quote.saying %></h1>
+<h2 class="pull-right">- <%= @quote.author %></h2>
+
+<br class="clear" />
+<br />
+<br />
+<br />
