--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -29,7 +29,7 @@
 
 .slogan {
   font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
-  font-sytle: italics;
+  font-style: italics;
   font-size: 20px;
   padding-top: 26px;
 }
@@ -41,8 +41,8 @@
 
 .links a {
   color: black;
-  font-size: 25px;
-  border-bottom: 1px solid #F08698;
+  text-align: right;
+  font-size: 20px;
   font-family: 'quicksanditalic';
   font-weight: bold;
 }
@@ -65,16 +65,17 @@
 
 .about {
   font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
+
 }
+
+header {
+  border-bottom: 9px solid #F56969;
+}  
 
 hr {
   clear:both;
 }
 
-header {
-  clear:both;
-  border-top: 9px solid #DE1436;
-}
 
 h1 {
   font-family: 'quicksanditalic';
