--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-    <header>
+    <header class = "outset">
       <div class= "col-xs-3">
       <%= link_to root_path do %>
         <div class="circle">
@@ -21,12 +21,14 @@
       <div class= "col-xs-4 hidden-xs slogan">
         Splurting out motivational quotes for all to see!
       </div>
-      <div class= "col-xs-8 col-xs-offset-1 col-sm-offset-o col-sm-5 links">
+      <div class= "col-xs-4 links">
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
         &nbsp;&nbsp;
         <%= link_to 'About', about_path %>
       </div>
     </header>
+
+
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -43,8 +45,6 @@
               <br/>
               <%= f.input :author, label: "Who is the author of this quote?" %>
               <br />
-              
-          
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
