--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-    <header class = "outset">
+
+    <header>
       <div class= "col-xs-3">
       <%= link_to root_path do %>
         <div class="circle">
@@ -18,16 +19,16 @@
         </div>
         <% end %>
       </div>
-      <div class= "col-xs-4 hidden-xs slogan">
+      <div class= "col-xs-4 hidden-xs slogan ">
         Splurting out motivational quotes for all to see!
       </div>
       <div class= "col-xs-4 links">
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
         &nbsp;&nbsp;
         <%= link_to 'About', about_path %>
-      </div>
+        </div>
     </header>
-
+    <hr />
 
 
   <!-- Modal -->
@@ -55,7 +56,6 @@
     </div>
   </div>
     
-    <hr />
     <br class= "clear" />
 <div class= "container">
   <% if flash[:error].present? %>
@@ -68,7 +68,7 @@
 
 <div class= "footer">
   <div class= "container">
-      <div class="col-xs-12 col-sm-6">
+      <div class="col-xs-12 col-sm-6 footer-blurb-not-enough">
         <%= link_to "This isn't enough, I need more motivation...", root_path, class: 'next-quote' %>
       </div>
       <div class="col-xs-12 col-sm-6 footer-blurb">
