Edit about page blurb

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -12,7 +12,7 @@
     <h2 class="text-center about">Elson Mathew</h2>
     <br />
     <p> 
-    Elson studied Neuroscience and Behavioral Biology at Emory University and has held jobs in retail, technology, science, and public service. Elson is currently learning to be a fullstack Ruby on rails Developer. Elson's goal is to mix his passion for web development with his facinatsion for medicine. In the meantime, he hopes to publish a webdev and medicine blog 
+    Elson studied Neuroscience and Behavioral Biology at Emory University and has held jobs in retail, technology, science, and public service. Elson is currently learning to be a fullstack Ruby on rails Developer. Elson's goal is to mix his passion for web development with his fascination for medicine. In the meantime, he hopes to publish a webdev and medicine blog 
     </p>
 </div>
 
